[tool.poetry]
name = "runner-with-api"
version = "0.5.0"
description = "Enable HTTP API on a long running process"
authors = ["dorinclisu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anyio = "^4.3.0"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.0"
litestar = "^2.9.1"
pytest = "^8.3.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
